--- a/templates/crossoff.html
+++ b/templates/crossoff.html
@@ -14,12 +14,19 @@
         <div class="container">
             <div><h1>Marauder's List</h1></div>
             {{range .Items}}
-                <button type="button" class="btn btn-info w-100">{{.Name}}</button>
+                <div class="btn-group d-flex" role="group">
+                    <button type="button" class="btn btn-info w-80">{{.Name}}</button>
+                    <button type="button" class="btn btn-success">Edit</button>
+                    <button type="button" class="btn btn-danger">Remove</button>
+                </div>
             {{end}}
-            <br/>
             <div><h2>Crossed off</h2></div>
             {{range .CrossedOffItems}}
-                <button type="button" class="btn btn-light w-100"><s>{{.Name}}</s></button>
+                <div class="btn-group d-flex" role="group">
+                    <button type="button" class="btn btn-outline-secondary w-80"><s>{{.Name}}</s></button>
+                    <button type="button" class="btn btn-success">Edit</button>
+                    <button type="button" class="btn btn-danger">Remove</button>
+                </div>
             {{end}}
         </div>
 
