Add copy on slices for shopping list service. Made mixed cases of crossed off consistent.

--- a/templates/crossoff.html
+++ b/templates/crossoff.html
@@ -21,7 +21,7 @@
                 </div>
             {{end}}
             <div><h2>Crossed off</h2></div>
-            {{range .CrossedOffItems}}
+            {{range .CrossedoffItems}}
                 <div class="btn-group d-flex" role="group">
                     <button type="button" class="btn btn-outline-secondary w-80"><s>{{.Name}}</s></button>
                     <button type="button" class="btn btn-success">Edit</button>
