Add links, tweaked layout and added /add endpoint

--- a/templates/crossoff.html
+++ b/templates/crossoff.html
@@ -13,6 +13,7 @@
     <body>
         <div class="container">
             <div><h1>Marauder's List</h1></div>
+            <a href="add">Add</a>
             {{range .Items}}
                 <div class="btn-group d-flex" role="group">
                     <button type="button" class="btn btn-info w-80">{{.Name}}</button>
